tests/multi_file/passing/T5_project_vs_std/trig.mlang
fn sin |value: f64|->f64 $value$;
