tests/multi_file/failing/T4_use_conflict/project/trig.mlang
namespace project {
    namespace trig {
        pub fn sin |value: f64|->f64 {
            value
        };
    }
}
